添加radio的禁用功能

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     "no-extra-boolean-cast": "off",
     "semi": [
       "error",
-      "always"
+      "never"
     ],
     "vue/require-prop-types": "off",
     "vue/require-default-prop": "off",
